--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,10 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:24.2.1'
     compile 'com.android.support:cardview-v7:24.2.1'
 
+    // retrofit2 http library
     compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
+
+    // glide library
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
